@@ -1,3 +1,8 @@
+2008-03-27 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
+
+	* src/MMapArea.py
+	Sync with trunk. Added selection box.
+
 2008-03-25 Martin Schaaf <mascha@ma-scha.de>
 
 	* src/TextThought.py
